--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
 			<header id="header">
 				<div class="content">
 					<center>
-					<h2>JORDAN CHIPPS</h2>
-					<h4>post production specialist</h4>
+					<h2><b>JORDAN CHIPPS</b></h2>
 					</center>
-					<br>
 					<p>
 					Experienced post production specialist with a demonstrated history of working in the media production industry. Skilled in post technologies, software, and systems. Advanced knowledge of production-based workflows & processes. Strong media and communications professional with a Bachelor of Fine Arts focused in Film from the University of Central Florida.
 					</p>
